fixed layout bug

--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ button {
     text-align: center;
 
     width: 48%;
-    
+    /* min-width: 250px; */
 }
 
 .top-info {
@@ -225,10 +225,12 @@ button {
 
 }
 @media (max-width: 500px) {
- 
+ /* hr {
+   width: 98%;
+ } */
   .navbar {
    
-    flex-direction: column;
+  flex-direction: column;
   }
     
   .navbar a {
@@ -239,4 +241,24 @@ button {
     color: lightgray;
   } 
 
+  .two-column {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+
+  }
+
+ 
+
+  .bottom-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+   .three-column {
+    width: 100%;
+  } 
 }
